# PicSee

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.run/: PicSee Build.run.xml  PicSee Release.run.xml
docs/: PicSee 需求修订 v0.3.md
docs/plans/: 2026-06-13-m4-frontend-canvas-pipeline.md  2026-06-13-m4-large-image-engine.md  2026-06-15-m6-lod-pyramid-design.md  2026-06-15-m6-phase1a-lod-pyramid.md  2026-06-15-m6-phase1b-lod-pyramid.md  2026-06-16-m6-phase2-lod-pyramid.md
scripts/: gen_test_bmp.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: color.rs  extended_formats.rs  file_operations.rs  images.rs  lib.rs  main.rs  settings.rs  thumbnails.rs
src-tauri/src/large_image/: bmp.rs  error.rs  mod.rs  policy.rs  pyramid.rs  pyramid_cache.rs  session.rs
src-tauri/tests/: images_contract.rs  settings_contract.rs  thumbnails_contract.rs
src/components/: AppLayout.vue  ImageCanvasViewer.test.ts  ImageCanvasViewer.vue  LargeImageCanvas.vue  NavigatorOverlay.vue  SettingsModal.vue  StatusBar.vue  ThumbnailSidebar.vue  TopToolbar.vue
src/composables/: useFileOperations.ts  useLargeImage.test.ts  useLargeImage.ts
src/i18n/: index.ts
src/locales/: en-US.ts  zh-CN.ts
src/stores/: app.ts  directory.ts  image.ts  settings.ts  thumbnail.ts  viewer.ts
src/styles/: main.css
src/types/: image.ts  settings.ts
src/utils/: largeImageCanvas.test.ts  largeImageCanvas.ts  largeImageUrl.ts  (+5 more)
