[package]
name = "picsee"
version = "0.1.0"
description = "PicSee 图片查看器"
authors = ["PicSee"]
edition = "2021"

[lib]
name = "picsee_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }
kamadak-exif = "0.6.1"
lcms2 = { version = "6.1.1", features = ["static"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
sha2 = "0.11.0"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tokio = { version = "1.52.3", features = ["sync"] }
lru = "0.12"
webp = "0.3"

[dev-dependencies]
tempfile = "3"
